Add build job for LUMI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,10 +69,30 @@ stages:
   before_script:
     - !reference [default, before_script]
 
+
 .gpu-job:
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
     - if: $CI_COMMIT_BRANCH =~ "/^gpu-.*/"
+
+
+.lumi-job:
+  variables:
+    SCHEDULER_PARAMETERS: "-A project_465000483 -N 1 --ntasks-per-node=1 --gpus-per-node=1 --mem=1G -t 00:20:00 -p dev-g"
+  before_script:
+    - export EBU_USER_PREFIX=/scratch/project_465000483/EasyBuild
+    - module load LUMI/22.12 partition/G
+    - module load cpeGNU/22.12
+    - module load cray-fftw/3.3.10.1
+    - module load cray-python/3.9.13.1
+    - module load CuPy/12.2.0-cpeGNU-22.12  # from EBU_USER_PREFIX
+    - module load libxc/6.1.0-cpeGNU-22.12  # from EBU_USER_PREFIX
+    - !reference [default, before_script]
+  rules:
+    - if: $GITLAB_USER_LOGIN == "jensj"
+    - if: $GITLAB_USER_LOGIN == "mikaelkuisma"
+    - if: $GITLAB_USER_LOGIN == "trossi"
+    - when: manual
 
 
 build:
@@ -191,6 +211,55 @@ build-minimal:
       EOF
     - cat siteconfig.py
     - pip install --user --log build.log --editable .
+    - gpaw info
+
+
+build-lumi:
+  extends:
+    - .build
+    - .lumi-job
+  tags:
+    - lumi
+  script:
+    - |
+      cat << EOF > siteconfig.py
+      parallel_python_interpreter = True
+      mpi = True
+      compiler = 'cc'
+      compiler_args = []
+      libraries = []
+      library_dirs = []
+      include_dirs = []
+      extra_compile_args = [
+          '-O3',
+          '-fopenmp',
+          '-fPIC',
+          '-Wall',
+          '-Wno-stringop-overflow',  # suppress warnings from MPI_STATUSES_IGNORE
+          '-Werror',
+          '-g',
+          ]
+      extra_link_args = ['-fopenmp']
+
+      fftw = True
+      libraries += ['fftw3']
+
+      scalapack = True
+
+      libraries += ['xc']
+
+      define_macros += [('GPAW_ASYNC', None)]
+
+      gpu = True
+      gpu_target = 'hip-amd'
+      gpu_compiler = 'hipcc'
+      gpu_include_dirs = []
+      gpu_compile_args = ['--offload-arch=gfx90a', '-O3', '-g']
+      libraries += ['amdhip64', 'hipblas']
+      EOF
+    - cat siteconfig.py
+    - pip install --user --no-deps git+https://gitlab.com/ase/ase.git@master
+    - pip install --user --no-deps --log build.log --editable .
     - gpaw info
 
 
