--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ stages:
 
 .lumi-job:
   variables:
-    SCHEDULER_PARAMETERS: "-A project_465000483 -N 1 --ntasks-per-node=1 --gpus-per-node=1 --mem=1G -t 00:20:00 -p dev-g"
+    SCHEDULER_PARAMETERS: "-A project_465000483 -N 1 --ntasks-per-node=1 --gpus-per-node=1 --mem=1G -t 00:10:00 -p dev-g"
   before_script:
     - export EBU_USER_PREFIX=/scratch/project_465000483/EasyBuild
     - module load LUMI/22.12 partition/G
@@ -87,7 +87,10 @@ stages:
     - module load cray-python/3.9.13.1
     - module load CuPy/12.2.0-cpeGNU-22.12  # from EBU_USER_PREFIX
     - module load libxc/6.1.0-cpeGNU-22.12  # from EBU_USER_PREFIX
+    - export GPAW_SETUP_PATH=/projappl/project_465000483/gpaw-setups-0.9.20000
     - !reference [default, before_script]
+  tags:
+    - lumi
   rules:
     - if: $GITLAB_USER_LOGIN == "jensj"
     - if: $GITLAB_USER_LOGIN == "mikaelkuisma"
@@ -218,8 +221,6 @@ build-lumi:
   extends:
     - .build
     - .lumi-job
-  tags:
-    - lumi
   script:
     - |
       cat << EOF > siteconfig.py
@@ -434,6 +435,18 @@ test-hip-cuda:
     - cuda
   script:
     - nvidia-smi
+    - gpaw info
+    - pytest -v -m gpu
+
+
+test-lumi:
+  extends:
+    - .test
+    - .lumi-job
+  needs:
+    - build-lumi
+  script:
+    - rocm-smi
     - gpaw info
     - pytest -v -m gpu
 
