--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,17 @@ stages:
 
 
 .lumi-job:
+  tags:
+    - lumi
+  rules:
+    - if: $GITLAB_USER_LOGIN == "jensj"
+    - if: $GITLAB_USER_LOGIN == "mikaelkuisma"
+    - if: $GITLAB_USER_LOGIN == "trossi"
+    - when: manual
+
+
+.lumi-g-job:
+  extends: .lumi-job
   variables:
     SCHEDULER_PARAMETERS: "-A project_465000483 -N 1 --ntasks-per-node=1 --gpus-per-node=1 --mem=4G -t 00:10:00 -p dev-g"
   before_script:
@@ -89,13 +100,6 @@ stages:
     - module load libxc/6.1.0-cpeGNU-22.12  # from EBU_USER_PREFIX
     - export GPAW_SETUP_PATH=/projappl/project_465000483/gpaw-setups-0.9.20000
     - !reference [default, before_script]
-  tags:
-    - lumi
-  rules:
-    - if: $GITLAB_USER_LOGIN == "jensj"
-    - if: $GITLAB_USER_LOGIN == "mikaelkuisma"
-    - if: $GITLAB_USER_LOGIN == "trossi"
-    - when: manual
 
 
 build:
@@ -217,10 +221,10 @@ build-minimal:
     - gpaw info
 
 
-build-lumi:
+build-lumi-g:
   extends:
     - .build
-    - .lumi-job
+    - .lumi-g-job
   script:
     - |
       cat << EOF > siteconfig.py
@@ -439,12 +443,12 @@ test-hip-cuda:
     - pytest -v -m gpu
 
 
-test-lumi:
+test-lumi-g:
   extends:
     - .test
-    - .lumi-job
+    - .lumi-g-job
   needs:
-    - build-lumi
+    - build-lumi-g
   script:
     - rocm-smi || true  # rocm-smi yields non-zero return code
     - gpaw info
