--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ stages:
 
 
 build:
-  image: $IMAGE_PATH/build:oldest
+  image: $IMAGE_PATH/main:oldest
   extends: .build
   tags:
     - linux
@@ -85,7 +85,7 @@ build:
 
 
 build-latest:
-  image: $IMAGE_PATH/build:latest
+  image: $IMAGE_PATH/main:latest
   extends: .build
   tags:
     - linux
@@ -175,7 +175,7 @@ build-hip-cuda:
 
 
 build-minimal:
-  image: $IMAGE_PATH/build:oldest
+  image: $IMAGE_PATH/main:oldest
   extends: .build
   tags:
     - linux
@@ -192,7 +192,7 @@ build-minimal:
 
 
 prepare-libxc:
-  image: $IMAGE_PATH/build:oldest
+  image: $IMAGE_PATH/main:oldest
   stage: build
   tags:
     - linux
@@ -220,7 +220,7 @@ prepare-libxc:
 
 
 build-libxc:
-  image: $IMAGE_PATH/build:oldest
+  image: $IMAGE_PATH/main:oldest
   extends:
     - .build
   needs:
@@ -241,7 +241,7 @@ build-libxc:
 
 
 test:
-  image: $IMAGE_PATH/run:oldest
+  image: $IMAGE_PATH/main:oldest
   extends:
     - .test
   needs:
@@ -266,7 +266,7 @@ test:
 
 
 test-latest:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   extends:
     - .test
   needs:
@@ -302,7 +302,7 @@ test-latest:
 
 
 test-latest-new:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   extends:
     - .test
   needs:
@@ -315,7 +315,7 @@ test-latest-new:
 
 
 test-minimal:
-  image: $IMAGE_PATH/run:oldest
+  image: $IMAGE_PATH/main:oldest
   extends:
     - .test
   needs:
@@ -377,7 +377,7 @@ test-hip-cuda:
 
 
 test-libxc:
-  image: $IMAGE_PATH/run:oldest
+  image: $IMAGE_PATH/main:oldest
   extends:
     - .test
   needs:
@@ -389,7 +389,7 @@ test-libxc:
     - pytest -v -m libxc
 
 check-agts:
-  image: $IMAGE_PATH/run:oldest
+  image: $IMAGE_PATH/main:oldest
   stage: test
   needs:
     - build
@@ -405,7 +405,7 @@ check-agts:
 
 
 lint:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   stage: build
   tags:
     - linux
@@ -443,7 +443,7 @@ lint:
 
 
 typecheck:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   stage: build
   tags:
     - linux
@@ -455,7 +455,7 @@ typecheck:
 
 
 docs:
-  image: $IMAGE_PATH/docs:oldest
+  image: $IMAGE_PATH/main:oldest
   stage: test
   needs:
     - build
@@ -475,7 +475,7 @@ docs:
 
 
 gpwfiles:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   extends:
     - .test
   needs:
@@ -496,7 +496,7 @@ gpwfiles:
 
 
 .nightly:
-  image: $IMAGE_PATH/run:latest
+  image: $IMAGE_PATH/main:latest
   variables:
     GPAW_MPI_NPROCS: "1"
   extends:
@@ -594,7 +594,7 @@ nightly-mpi-8:
 
 
 pages:
-  image: $IMAGE_PATH/run:latest  # (Any image present on the runner will do)
+  image: $IMAGE_PATH/main:latest  # (Any image present on the runner will do)
   stage: deploy
   dependencies:
     - nightly-mpi-1
