--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ build-latest:
 
 
 build-cuda:
-  image: $IMAGE_PATH/cuda:11-staging
+  image: $IMAGE_PATH/cuda:11
   extends:
     - .build
     - .gpu-job
@@ -148,7 +148,7 @@ build-cuda:
 
 
 build-hip-cuda:
-  image: $IMAGE_PATH/cuda:11-staging
+  image: $IMAGE_PATH/cuda:11
   extends:
     - .build
     - .gpu-job
@@ -329,7 +329,7 @@ test-minimal:
       -Wi:'numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject':RuntimeWarning
 
 test-cuda:
-  image: $IMAGE_PATH/cuda:11-staging
+  image: $IMAGE_PATH/cuda:11
   extends:
     - .test
     - .gpu-job
@@ -346,7 +346,7 @@ test-cuda:
     - gpaw-python -m pytest -v -m gpu
 
 test-cuda-mpi:
-  image: $IMAGE_PATH/cuda:11-staging
+  image: $IMAGE_PATH/cuda:11
   extends:
     - .test
     - .gpu-job
@@ -362,7 +362,7 @@ test-cuda-mpi:
 
 
 test-hip-cuda:
-  image: $IMAGE_PATH/cuda:11-staging
+  image: $IMAGE_PATH/cuda:11
   extends:
     - .test
     - .gpu-job
