--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -396,7 +396,8 @@ check-agts:
   tags:
     - linux
   script:
-    - pip install --user git+https://gitlab.com/myqueue/myqueue.git@master
+    # - pip install --user git+https://gitlab.com/myqueue/myqueue.git@master
+    - pip install --user myqueue=23.4  # supports Python 3.7
     - mq config --in-place
     - mq init
     - mq workflow -p agts.py -zT | tail -1 | tee task_count
