various python 3.8 bumps

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
   stage: build
   before_script:
     - !reference [default, before_script]
-    - pip install --user --no-deps git+https://gitlab.com/ase/ase.git@f283d1e7350a5136dc80fc983b649bf2a7f20135
+    - pip install --user --no-deps git+https://gitlab.com/ase/ase.git
     - |
       cat << EOF > siteconfig.py
       parallel_python_interpreter = True
@@ -397,7 +397,7 @@ check-agts:
     - linux
   script:
     # - pip install --user git+https://gitlab.com/myqueue/myqueue.git@master
-    - pip install --user myqueue==23.4  # supports Python 3.7
+    - pip install --user myqueue
     - mq config --in-place
     - mq init
     - mq workflow -p agts.py -zT | tail -1 | tee task_count
