--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,8 @@ variables:
   PYTHONUSERBASE: ".local"
   IMAGE_PATH: "registry.gitlab.com/gpaw/gpaw-ci-containers"
   IMAGE_MAIN_OLDEST: "$IMAGE_PATH/main:oldest-staging"
+  IMAGE_MAIN_LATEST: "$IMAGE_PATH/main:latest"
+  IMAGE_CUDA: "$IMAGE_PATH/cuda:11"
   OMP_NUM_THREADS: "1"
 
 default:
@@ -86,7 +88,7 @@ build:
 
 
 build-latest:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   extends: .build
   tags:
     - linux
@@ -127,7 +129,7 @@ build-latest:
 
 
 build-cuda:
-  image: $IMAGE_PATH/cuda:11
+  image: $IMAGE_CUDA
   extends:
     - .build
     - .gpu-job
@@ -149,7 +151,7 @@ build-cuda:
 
 
 build-hip-cuda:
-  image: $IMAGE_PATH/cuda:11
+  image: $IMAGE_CUDA
   extends:
     - .build
     - .gpu-job
@@ -267,7 +269,7 @@ test:
 
 
 test-latest:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   extends:
     - .test
   needs:
@@ -303,7 +305,7 @@ test-latest:
 
 
 test-latest-new:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   extends:
     - .test
   needs:
@@ -330,7 +332,7 @@ test-minimal:
       -Wi:'numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject':RuntimeWarning
 
 test-cuda:
-  image: $IMAGE_PATH/cuda:11
+  image: $IMAGE_CUDA
   extends:
     - .test
     - .gpu-job
@@ -347,7 +349,7 @@ test-cuda:
     - gpaw-python -m pytest -v -m gpu
 
 test-cuda-mpi:
-  image: $IMAGE_PATH/cuda:11
+  image: $IMAGE_CUDA
   extends:
     - .test
     - .gpu-job
@@ -363,7 +365,7 @@ test-cuda-mpi:
 
 
 test-hip-cuda:
-  image: $IMAGE_PATH/cuda:11
+  image: $IMAGE_CUDA
   extends:
     - .test
     - .gpu-job
@@ -407,7 +409,7 @@ check-agts:
 
 
 lint:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   stage: build
   tags:
     - linux
@@ -445,7 +447,7 @@ lint:
 
 
 typecheck:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   stage: build
   tags:
     - linux
@@ -477,7 +479,7 @@ docs:
 
 
 gpwfiles:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   extends:
     - .test
   needs:
@@ -501,7 +503,7 @@ gpwfiles:
 
 
 .nightly:
-  image: $IMAGE_PATH/main:latest
+  image: $IMAGE_MAIN_LATEST
   variables:
     GPAW_MPI_NPROCS: "1"
   extends:
@@ -602,7 +604,7 @@ nightly-mpi-8:
 
 
 pages:
-  image: $IMAGE_PATH/main:latest  # (Any image present on the runner will do)
+  image: $IMAGE_MAIN_LATEST  # (Any image present on the runner will do)
   stage: deploy
   dependencies:
     - nightly-mpi-1
