use new "oldest" docker (it is published now)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   PYTHONUSERBASE: ".local"
   IMAGE_PATH: "registry.gitlab.com/gpaw/gpaw-ci-containers"
-  IMAGE_MAIN_OLDEST: "$IMAGE_PATH/main:oldest-staging"
+  IMAGE_MAIN_OLDEST: "$IMAGE_PATH/main:oldest"
   IMAGE_MAIN_LATEST: "$IMAGE_PATH/main:latest"
   IMAGE_CUDA: "$IMAGE_PATH/cuda:11"
   OMP_NUM_THREADS: "1"
