--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -251,7 +251,7 @@ test:
   script:
     - gpaw info
     - >
-      OMP_NUM_THREADS=2 pytest -v -m ci -We -Wi::ImportWarning
+      OMP_NUM_THREADS=2 pytest -v -m ci -We
 
     # This is the only test which uses OpenMP.
     # We may want to identify a limited set of tests that must work
@@ -259,8 +259,7 @@ test:
 
     - gpaw-python -m gpaw info
     - >
-      OMP_NUM_THREADS=2 gpaw-python -m pytest -v -m ci
-      -We -Wi::ImportWarning
+      OMP_NUM_THREADS=2 gpaw-python -m pytest -v -We test_fuzz.py -k 0-pw
 
 
 test-latest:
@@ -284,10 +283,6 @@ test-latest:
     - >
       pytest -v -m ci -m gpu
       --cov=gpaw --cov-report=html --cov-report=term
-
-    - gpaw-python -m gpaw info
-    - >
-      gpaw-python -m pytest -v -m ci
 
   artifacts:
     paths:
@@ -320,7 +315,7 @@ test-minimal:
   script:
     - gpaw info
     - >
-      pytest -v -m ci -We -Wi::ImportWarning
+      pytest -v -m ci -We
 
 test-cuda:
   image: $IMAGE_PATH/cuda:11
