update another path

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -302,7 +302,7 @@ test-latest-new:
     - linux
   script:
     - gpaw info
-    - GPAW_NEW=1 pytest -v -m "ci and not later"
+    - GPAW_NEW=1 pytest -v -m "ci and not later" gpaw/test/
 
 
 test-minimal:
