Disable broken gpaw-python

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -366,8 +366,8 @@ test-cuda-mpi:
     - gpaw info
     - mpirun -np 2 pytest -v -m gpu
     - mpirun -np 4 pytest -v -m gpu
-    - mpirun -np 2 gpaw-python -m pytest -v -m gpu
-    - mpirun -np 4 gpaw-python -m pytest -v -m gpu
+    # mpirun -np 2 gpaw-python doesn't work, see #1052
+    # - mpirun -np 2 gpaw-python -m pytest -v -m gpu
 
 test-hip-cuda:
   image: $IMAGE_CUDA
