mark tetrahedron integration tests as pytest.mark.tetrahedron

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,7 @@ markers =
     mgga: MGGA test,
     mom: MOM,
     ofdft: Orbital-free DFT,
+    pipekmezey : PipekMezey wannier functions
     response: tests of the response code,
     rpa: tests of RPA,
     rttddft: Real-time TDDFT,
@@ -33,5 +34,5 @@ markers =
     slow: slow test,
     soc: Spin-orbit coupling,
     stress: Calculation of stress tensor,
+    tetrahedron: Tetrahedron integrator in response code,
     wannier: Wannier functions,
-    pipekmezey : PipekMezey wannier functions
