--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,13 +3,13 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.12"
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: doc/conf.py
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: doc/requirements.txt
     - method: pip
       path: .
