--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,14 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  jobs:
+    pre_install:
+      - |
+        cat << EOF > siteconfig.py
+        mpi = False
+        noblas = True
+        nolibxc = True
+        EOF
 
 sphinx:
   configuration: doc/conf.py
