--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -13,6 +13,7 @@ build:
         nolibxc = True
         EOF
     pre_build:
+      - apt-get update && apt-get -y install graphviz povray
       - gpaw-setup H
       - export GPAW_SETUP_PATH=$PWD
 
