--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,6 +4,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  apt_packages:
+    - graphviz
+    - povray
   jobs:
     pre_install:
       - |
@@ -13,7 +16,6 @@ build:
         nolibxc = True
         EOF
     pre_build:
-      - apt-get update && apt-get -y install graphviz povray
       - gpaw-setup H
       - export GPAW_SETUP_PATH=$PWD
 
