--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,7 +21,10 @@ build:
       - echo $PWD
       - echo $HOME
       - mkdir $HOME/.gpaw
-      - echo "setup_paths[:] = ['/home/docs/checkouts/readthedocs.org/user_builds/gpaw/checkouts/latest']" > $HOME/.gpaw/rc.py
+      - |
+        cat << EOF > $HOME/.gpaw/rc.py
+        setup_paths[:] = ['/home/docs/checkouts/readthedocs.org/user_builds/gpaw/checkouts/latest']
+        EOF
 
 sphinx:
   configuration: doc/conf.py
