mark all the dielectric function tests with @pytest.mark.dielectricfunction.  Also, apply some markers that should have been applied

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,6 +8,7 @@ filterwarnings =
 
 markers =
     ci: test included in CI,
+    dielectricfunction: Tests of gpaw.response.df
     do: Direct optimization,
     dscf: Delta-SCF,
     elph: Electron-phonon,
