--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include MANIFEST.in
-include LICENSE CONTRIBUTING.rst CHANGELOG.rst
+include COPYING LICENSE CONTRIBUTING.rst CHANGELOG.rst
 include config.py siteconfig_example.py
 include c/*.c
 include c/*.h
