--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -243,6 +243,7 @@ build-lumi-g:
           '-fopenmp',
           '-fPIC',
           '-Wall',
+          '-Wno-unused-result',
           '-std=c++20',
           '-Wno-stringop-overflow',  # suppress warnings from MPI_STATUSES_IGNORE
           '-Werror',
@@ -266,6 +267,7 @@ build-lumi-g:
           '-g',
           '-O3',
           '-std=c++20',
+          '-Wno-unused-result',
           '--offload-arch=gfx90a',
           ]
       libraries += ['amdhip64', 'hipblas']
